[package]
name = "MotorControlRust"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f407ze", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
embassy-usb = "0.3.0"
embedded-hal = "1.0.0"
embedded-io-async = "0.6.1"
panic-probe = {version = "0.3.2", features = ["print-defmt"]}

[profile.release]
debug = 2
